# foocat-vanandsh

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocat_vanandsh.rst  modules.rst
foocat_vanandsh/: foocat_vanandsh.py
tests/: test_foocat_vanandsh.py
